--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,10 @@
       ,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rye&display=swap" 
       rel="stylesheet"
     >
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
     <title>Jordan Weinstein</title>
   </head>
   <body>
